# ai-aws-automations

./: .gitignore  Dockerfile  README.md  build_and_push.sh  docker-compose.yml  pyproject.toml
api_gateway_poc/: lambda_function.py  rest_api_lambda_dynamodb.py
aws-lambda-function-toolkit-sam/: README.md  env.json  template.yml
aws-lambda-function-toolkit-sam/events/: sqs_event.json
aws-lambda-function-toolkit-sam/src/: lambda_function.py  requirements.txt
aws_devops/: .dokcerignore  Dockerfile.txt  pyproject.toml
aws_devops/label-studio/: README.md  config_astraannotate.py
aws_devops/label-studio/src/: create_table_task.py
aws_devops/label-studio/stacks/: AstraAnnotateStack.py
clone_scripts/: clone_dynamodb.py  clone_glue.py  clone_kinesis.py  clone_lambda.py  clone_pipeline_ec_collector_tdf.py  destroy_cloned_services.py
cloudwatch_log_monitor/: Dockerfile  app.py  lambda_log_monitor.py  readme.md
develop_glue_locally/glue_project1/: glue_demo1.py  my_utils.py
develop_glue_locally/scripts/: sample_pandas.py  sample_polars.py
ec2/: clone_ec2_full.py  ec2_instance_check_inbound_outbound.py  ec2_instance_properties_154.py  ec2_instance_properties_48.py  ec2_scheduler.py  fetch_ec2_properties.py
glue/: README.md  driver_executor_demo.py  find_glue_job_by_run_id.py  get_glue_job_args.py  log4j.properties  my_glue_job.py  windows_spark_setup.py
glue/logs/: structured_log.jsonl
kinesis/: consumer_kinesis_spark.py  delete_and_recreate_stream.py  demo_kinesis_producer.py  kinesis_event_producer.py  kinesis_item_producer.py  kinesis_xml_data.py  pocs_kinsalite.py  send_to_kinesis.py
log4j_api_poc/: log4j2.properties  log4j_logging_example.py
log4j_api_poc/logs/: structured_log.jsonl
log4j_glue_job/: README.md  main.py
pyspark/: pyspark_ai_poc.py
rustdesk-scheduler-cdk/: README.md  app.py  cdk.json  ec2_control_cli.py  example_configurations.py  invoke_lambda_function.py  test_configuration.py
s3/: s3_downloader.py  s3_gitchange_uploader.py  s3_upload_download_efficient.py  s3_uploader.py  uploader_changes_file_s3.py
spark-history-server-poc/: README.md  spark-defaults.conf  spark_job.py  start-history-server.cmd  start-history-server.sh
(+14 files in other folders)
