[tool.poetry]
name = "my_aws_projects"
version = "0.1.0"
description = "Data Engineering Projects"
authors = ["Irshad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.34.84"
botocore = ">=1.34.84,<1.35.0"
pandas = "2.1.4"
pyarrow = "14.0.0"
redshift-connector = "2.0.918"
sagemaker = "2.212.0"
requests = "2.31.0"
responses = "0.18.0"
s3transfer = "0.10.1"
debugpy = ">=1.8.0,<1.9.0"
schedule = "^1.2.2"
polars = "^1.26.0"
tenacity = "^9.1.2"
pyspark = "3.3.2"
awsglue3-local = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
